refactor: add community to the route response
